availability-service/src/main/kube/deploy.envsubst.yaml
---

# Deployment descriptor
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: "${PROJECT_ARTIFACTID}"
    app.kubernetes.io/component: "${PROJECT_ARTIFACTID}"
    app.kubernetes.io/part-of: "${PROJECT_ARTIFACTID}"
    app.kubernetes.io/instance: "${PROJECT_ARTIFACTID}-main"
    app.kubernetes.io/version: "${PROJECT_VERSION}"
  name: "${PROJECT_ARTIFACTID}"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "${PROJECT_ARTIFACTID}"
      app.kubernetes.io/component: "${PROJECT_ARTIFACTID}"
      app.kubernetes.io/part-of: "${PROJECT_ARTIFACTID}"
      app.kubernetes.io/instance: "${PROJECT_ARTIFACTID}-main"
      app.kubernetes.io/version: "${PROJECT_VERSION}"
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
        prometheus.io/path:  "/actuator/prometheus"
      labels:
        app.kubernetes.io/name: "${PROJECT_ARTIFACTID}"
        app.kubernetes.io/component: "${PROJECT_ARTIFACTID}"
        app.kubernetes.io/part-of: "${PROJECT_ARTIFACTID}"
        app.kubernetes.io/instance: "${PROJECT_ARTIFACTID}-main"
        app.kubernetes.io/version: "${PROJECT_VERSION}"
    spec:
      containers:
      - name: ${PROJECT_ARTIFACTID}
        image: "${CONTAINER_REGISTRY}/${PROJECT_ARTIFACTID}:${PROJECT_VERSION}"
        imagePullPolicy: "Always"
        livenessProbe:
          httpGet:
            path: "/actuator/health"
            port: 8081
            scheme: "HTTP"
          initialDelaySeconds: 0
          successThreshold: 1
          periodSeconds: 10
          failureThreshold: 40 
        readinessProbe:
          httpGet:
            path: "/actuator/health"
            port: 8081
            scheme: "HTTP"
          initialDelaySeconds: 0
          successThreshold: 1
          periodSeconds: 10
          failureThreshold: 40 
        resources:
          # limits:
          #   cpu: "1.0"
          #   memory: "1024Mi"
          # requests:
          #   cpu: "0.2"
          #   memory: "128Mi"
        ports:
          - containerPort: 8080
          - containerPort: 8081
        volumeMounts:
          - mountPath: "/deployments/tls"
            name: "tls-secret-volume"
            readOnly: true
          - mountPath: "/deployments/config"
            name: "prop-secret-volume"
            readOnly: true
      volumes:
        - name: "tls-secret-volume"
          secret:
            defaultMode: 420
            secretName: "${PROJECT_ARTIFACTID}-tls-secret"
        - name: "prop-secret-volume"
          secret:
            defaultMode: 420
            secretName: "${PROJECT_ARTIFACTID}-prop-secret"
---
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app.kubernetes.io/name: "${PROJECT_ARTIFACTID}"
    app.kubernetes.io/component: "${PROJECT_ARTIFACTID}"
    app.kubernetes.io/part-of: "${PROJECT_ARTIFACTID}"
    app.kubernetes.io/instance: "${PROJECT_ARTIFACTID}-main"
    app.kubernetes.io/version: "${PROJECT_VERSION}"
  name: "${PROJECT_ARTIFACTID}"
spec:
  type: ClusterIP
  ports:
  - name: "http"
    port: 8080
    protocol: "TCP"
    targetPort: 8080
  selector:
    app.kubernetes.io/name: "${PROJECT_ARTIFACTID}"
    app.kubernetes.io/component: "${PROJECT_ARTIFACTID}"
    app.kubernetes.io/part-of: "${PROJECT_ARTIFACTID}"
    app.kubernetes.io/instance: "${PROJECT_ARTIFACTID}-main"
    app.kubernetes.io/version: "${PROJECT_VERSION}"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${PROJECT_ARTIFACTID}
  labels:
    app.kubernetes.io/name: "${PROJECT_ARTIFACTID}"
    app.kubernetes.io/component: "${PROJECT_ARTIFACTID}"
    app.kubernetes.io/part-of: "${PROJECT_ARTIFACTID}"
    app.kubernetes.io/instance: "${PROJECT_ARTIFACTID}-main"
    app.kubernetes.io/version: "${PROJECT_VERSION}"
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: ${PROJECT_ARTIFACTID}.${KUBE_INGRESS_ROOT_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${PROJECT_ARTIFACTID}
            port:
              number: 8080
---
